# thgaming-mubot-engine

./: .gitignore  poetry.toml  pyproject.toml  run.py
Il2CppDumper/: config.json
pyinstaller-hooks/: hook-capstone.py  hook-keystone.py
src/bases/engines/: __init__.py  action_handlers.py  event_participators.py  function_triggerers.py  game_action_handlers.py  game_context_synchronizers.py  operators.py  prototypes.py  quiz_solvers.py  world_map_handler.py
src/bases/engines/data_models/: __init__.py
src/bases/errors/: __init__.py
src/bases/models/: __init__.py
src/bases/os/: __init__.py
src/bases/services/: __init__.py
src/bases/trainers/: prototypes.py
src/constants/: __init__.py  trainer.py
src/constants/engine/: __init__.py  events.py  game_funcs.py  unity_megamu.py
src/constants/os/: __init__.py
src/constants/type_parsers/: csharp.py
src/engines/unity_megamu/: __init__.py  action_handlers.py  data_models.py  event_participators.py  function_triggerers.py  game_action_handlers.py  game_context_synchronizers.py  operators.py
src/engines/unity_megamu/event_participators/: quiz.py  stop_or_die.py
src/os/windows/: __init__.py  comctl32.py  comdlg32.py  gdi32.py  kernel32.py  user32.py  winapi_error.py  wintypes_extended.py
src/trainers/: __init__.py  restful_servers.py  websocket_servers.py
src/utils/: __init__.py  json_encoders.py  logging.py
src/utils/type_parsers/: csharp.py
