[tool.poetry]
name = "muonline-trainer"
version = "1.0.0"
description = ""
authors = ["tringuyen5835@gmail.com"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
pydantic = {extras = ["email"], version = "^2.11.7"}
fastapi = "^0.115.12"
click = "^8.2.1"
websockets = "^15.0.1"
uvicorn = "^0.34.3"
keystone-engine = "^0.9.2"
cryptography = "^45.0.4"
psutil = "^7.0.0"
capstone = "^5.0.6"
aiohttp = "^3.12.13"


[tool.poetry.group.dev.dependencies]
numpy = "^2.3.1"
matplotlib = "^3.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
